Style: aligned image to the right and fixed some margins

--- a/blog-website/blog-post/content.css
+++ b/blog-website/blog-post/content.css
@@ -1,5 +1,34 @@
 .content{
-   display:flex;
-   flex-direction: column;
+    margin: 0;
+    padding:0 0.7em;
+
+}
+
+.content,
+.image{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.image{
+    height: 50%;
+}
+
+.title
+.header{
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.article{
+    font-size: 21px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (min-width: 600px){
+.image{
+    float: right;
+    margin: 0 1em;  
+}
 
 }
